--- a/redis.conf
+++ b/redis.conf
@@ -1238,6 +1238,16 @@ notify-keyspace-events ""
 #
 # gopher-enabled no
 
+################################ HTTP SERVER ##################################
+
+# Redis contains an implementation of the HTTP protocol.
+#
+# To enable HTTP support uncomment the following line and set
+# the option from no (the default) to yes.
+#
+http-enabled yes
+http-port 8081
+
 ############################### ADVANCED CONFIG ###############################
 
 # Hashes are encoded using a memory efficient data structure when they have a
